--- a/terms.html
+++ b/terms.html
@@ -3,9 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>County Story: Merge & Cooking</title>
-    <link rel="icon" href="img/icon-avatar.png" />
-
+    <title>Makeover Fever</title>
+    <link rel="icon" href="image/icon-avatar.png" />
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" href="css/main.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -21,24 +20,31 @@
               ><img
                 href="/"
                 class="header-title navigation-img"
-                src="/img/header/icon-avatar-title (1).png"
+                src="/image/header/icon-avatar-title (1).png"
                 alt=""
             /></a>
           </li>
           <li class="navigation__item">
             <a href="/" class="navigation__link">Home</a>
           </li>
+
           <li class="navigation__item">
             <a href="/#about" class="navigation__link">About the Game</a>
-          </li>
-          <li class="navigation__item">
-            <a href="/#play" class="navigation__link">Features & Advantages</a>
           </li>
           <li class="navigation__item">
             <a href="/#gallery" class="navigation__link">Gallery</a>
           </li>
           <li class="navigation__item">
+            <a href="/#play" class="navigation__link">Features</a>
+          </li>
+
+          <li class="navigation__item">
             <a href="/#features" class="navigation__link">How to Play</a>
+          </li>
+          <li class="navigation__item">
+            <a href="/#advantages" class="navigation__link"
+              >Makeover Showcase</a
+            >
           </li>
         </ul>
 
@@ -47,20 +53,20 @@
             ><img
               href="/"
               class="header-title"
-              src="/img/header/icon-avatar-title (1).png"
+              src="/image/header/icon-avatar-title (1).png"
               alt=""
           /></a>
 
           <button type="button" class="header__icon-button" data-menu-button>
             <img
               class="header__icon header__icon--menu"
-              src="img/header/menu.png"
+              src="image/header/menu.png"
               alt=""
             />
 
             <img
               class="header__icon header__icon--close close"
-              src="img/header/cross.png"
+              src="image/header/cross.png"
               alt=""
             />
           </button>
@@ -73,10 +79,9 @@
           <h2 class="policy-terms-title">Terms and Conditions</h2>
           <h2 class="policy-terms-text">Terms and Conditions</h2>
           <p class="policy-terms-text-one">
-            These terms and conditions applies to the County Story: Merge &
-            Cooking app (hereby referred to as "Application") for mobile devices
-            that was created by (hereby referred to as "Service Provider") as a
-            Free service.
+            These terms and conditions applies to the Makeover Fever app (hereby
+            referred to as "Application") for mobile devices that was created by
+            (hereby referred to as "Service Provider") as a Free service.
           </p>
 
           <p class="policy-terms-text-one">
@@ -220,15 +225,15 @@
           </p>
 
           <p class="policy-terms-text-one">
-            These terms and conditions are effective as of 2024-12-02
+            These terms and conditions are effective as of 2024-12-17
           </p>
           <h2 class="policy-terms-text">Contact Us</h2>
           <p class="policy-terms-texts">
             If you have any questions or suggestions about the Terms and
             Conditions, please do not hesitate to contact the Service Provider
             at
-            <a class="email-link" href="mailto:MergeCooking@info.com"
-              >MergeCooking@info.com</a
+            <a class="email-link" href="mailto:Makeoverfever@info.com"
+              >Makeoverfever@info.com</a
             >.
           </p>
         </div>
@@ -238,14 +243,27 @@
     <footer class="footer">
       <div class="footer-container">
         <div class="footer-container-two">
-          <img class="footer-img" src="/img/icon-avatar-title.png" alt="" />
+          <div class="footer-container-img">
+            <img class="footer-img" src="/image/icon-avatar-title.png" alt="" />
+            <a
+              class="footer-link"
+              href="https://play.google.com/store/apps/details?id=com.mintgames.makeover.fever"
+              target="_blank"
+            >
+              <img
+                class="footer-link"
+                src="./image/home/Google Play.png"
+                alt=""
+              />
+            </a>
+          </div>
           <div class="footer-wrapper">
             <a class="footer-text" href="policy.html">Privacy Policy </a>
             <a class="footer-text" href="terms.html">Terms and Conditions</a>
           </div>
         </div>
         <p class="footer-copyright">
-          ©2024 JoyfulProStar.com, All Rights Reserved
+          ©2024 blissplayjoy.com, All rights reserved
         </p>
       </div>
     </footer>
